--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
         classpath "com.android.tools.build:gradle:4.2.1"
         classpath 'com.google.gms:google-services:4.3.8'
 
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -17,7 +18,7 @@ allprojects {
     repositories {
         google()
         mavenCentral()
-        maven { url 'https://jitpack.io' } // Warning: this repository is going to shut down soon
+        maven { url 'https://jitpack.io' }
     }
 }
 
