--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,11 +15,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AAS">
-        <activity android:name=".ui.slideshow.OtpVerification"></activity>
+        <activity android:name=".ui.slideshow.OtpVerification" />
         <activity android:name=".ui.slideshow.PhoneNumber" />
         <activity android:name=".ui.slideshow.MyOrders" />
         <activity android:name=".AdDetail" />
-
         <activity android:name=".ui.gallery.MainActivity" />
         <activity android:name=".ui.slideshow.Feedback" />
         <activity android:name=".ui.gallery.AddPhoto" />
