--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AAS">
+        <activity android:name=".AdReviews"></activity>
         <activity android:name=".ui.slideshow.OtpVerification" />
         <activity android:name=".ui.slideshow.PhoneNumber" />
         <activity android:name=".ui.slideshow.MyOrders" />
