--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,18 +15,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AAS">
-        <activity android:name=".AdReviews"></activity>
-        <activity android:name=".ui.home.Portfolio"></activity>
+        <activity android:name=".ui.slideshow.UserDetailsIndividual"></activity>
+        <activity android:name=".AdReviews" />
+        <activity android:name=".ui.home.Portfolio" />
         <activity android:name=".ui.slideshow.InternshipForm" />
         <activity android:name=".ui.slideshow.OtpVerification" />
         <activity android:name=".ui.slideshow.SavedAds" />
         <activity android:name=".ui.slideshow.PhoneNumber" />
         <activity android:name=".ui.slideshow.MyOrders" />
         <activity android:name=".AdDetail" />
-        <activity android:name=".ui.gallery.MainActivity" />
         <activity android:name=".ui.slideshow.Feedback" />
         <activity android:name=".ui.gallery.AddPhoto" />
         <activity android:name=".ui.slideshow.Notifications" />
+        <activity android:name=".ui.slideshow.LoginActivity" />
+        <activity android:name=".ui.slideshow.SignupActivity" />
+        <activity android:name=".ui.slideshow.UserDetailsActivity" />
         <activity android:name=".ui.slideshow.ContactUs" />
         <activity android:name=".ui.slideshow.Settings" />
         <activity android:name=".ui.slideshow.Blogs" />
