--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,5 +62,8 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
+    //picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
 
 }
