--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,10 @@ dependencies {
 
     //picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
+    //circleImage
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    //weather
+    implementation 'com.loopj.android:android-async-http:1.4.11'
 
 
 }
