--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,7 +67,8 @@ dependencies {
     //circleImage
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     //weather
-    implementation 'com.loopj.android:android-async-http:1.4.11'
+    implementation 'com.android.volley:volley:1.2.0'
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
 
 
 }
